--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Helping Businesses Succeed with Technology</title>
 </head>
 
 <body>
@@ -34,14 +34,16 @@
         <!--formally the now naviagtion bar was content-->
         <article id="search-engine-optimization" class="search-engine-optimization">
               <!--formally there was a div in front of class and now there is article which more specific-->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+                     <!--added descriptions to the photos in the form of alt=-->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="diagram showing main components of optimizing search engines" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" alt="graph of improving reputation" class="online-reputation-management">
          <!--formally there was a div in front of class and now there is article which more specific-->
+                <!--added descriptions to the photos in the form of alt=-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +51,8 @@
             </p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />  
+            <!--added descriptions to the photos in the form of alt=-->
+            <img src="./assets/images/social-media-marketing.jpg" alt="photo of interacting with social media" class="float-left" />  
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -62,21 +65,24 @@
         <article class="benefit-lead">
             <!--formally as items before class said dv but now is article which is more specific.-->
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+             <!--added descriptions to the photos in the form of alt=-->
+            <img src="./assets/images/lead-generation.png" alt="photo of input of operations to output money"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
         <article class="benefit-brand">
+            <!--added descriptions to the photos in the form of alt=-->
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="picture of a lightbulb on the head of business person to show that individual having an idea"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>>
         <artilce class="benefit-cost">
+                <!--added descriptions to the photos in the form of alt=-->
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="picture of a gear and money symbols"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
